Fix cone spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ html {
 
 .banner {
   min-height: 500px;
-  /*background-color: #d4fdff;*/
   background-image: repeating-linear-gradient(-32.5deg, #c9fcff, #c9fcff 1%, #d4fdff 2%, #d4fdff 3%);
   border-top: 7.5px solid #b3fbff;
   border-bottom: 7.5px solid #b3fbff;
@@ -67,7 +66,7 @@ p {
 
 .cone {
   bottom: 10px;
-  left: 30px;
+  left: 50px;
   z-index: 2;
   transform: translateY(-100rem);
   animation: cone 1s linear forwards;
@@ -75,7 +74,7 @@ p {
 
 .mint {
   bottom: 115px;
-  left: 30px;
+  left: 50px;
   z-index: 1;
   transform: translateY(-100rem);
   animation: cone 1s .5s linear forwards;
@@ -83,7 +82,7 @@ p {
 
 .choco {
   bottom: 195px;
-  left: 35px;
+  left: 55px;
   z-index: 3;
   transform: translateY(-100rem);
   animation: cone 1s 1s linear forwards;
@@ -91,7 +90,7 @@ p {
 
 .vanilla {
   bottom: 280px;
-  left: 30px;
+  left: 50px;
   z-index: 4;
   transform: translateY(-100rem);
   animation: cone 1s 1.5s linear forwards;
@@ -99,7 +98,7 @@ p {
 
 .cherry {
   bottom: 360px;
-  left: 30px;
+  left: 50px;
   z-index: 5;
   transform: translateY(-100rem);
   animation: cone 1s 2s linear forwards;
